fixing horizontal overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body, html {
 	width: 100%;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 /* navbar */
 .navbar-fixed-top {
 	background-color: rgba(0, 0, 0, 0.2);
